--- a/src/webui/livemgr/templates/layout_base.html
+++ b/src/webui/livemgr/templates/layout_base.html
@@ -52,6 +52,9 @@
 
 {% block body %}{% endblock %}
 
+	<div class="spinner">
+		<img src="{{ MEDIA_URL }}/img/spinner.gif" alt="Loading"/>
+	</div>
 </body>
 </html>
 {% endspaceless %}
