Fixed misplaced styles related to font-family and font-size. Added body-container class to centralize the layout. Better use of margins, padding, and border-radius.

--- a/src/webui/livemgr/templates/layout_base.html
+++ b/src/webui/livemgr/templates/layout_base.html
@@ -49,11 +49,11 @@
 
 </head>
 <body>
-
-{% block body %}{% endblock %}
-
-	<div class="spinner">
-		<img src="{{ MEDIA_URL }}/img/spinner.gif" alt="Loading"/>
+	<div class="body-container">
+		{% block body %}{% endblock %}
+		<div class="spinner">
+			<img src="{{ MEDIA_URL }}/img/spinner.gif" alt="Loading"/>
+		</div>
 	</div>
 </body>
 </html>
