--- a/src/webui/media/css/current/login.css
+++ b/src/webui/media/css/current/login.css
@@ -4,12 +4,12 @@ body.login  {
 	font-size: 12px;
 	background-color: #fff;
 }
-.login #outer-container {
+.login .body-outer-container {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 }
-.login #inner-container {
+.login .body-inner-container {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -38,14 +38,7 @@ body.login  {
 	-webkit-border-radius: 4px 4px 4px 4px;
 	-moz-border-radius: 4px 4px 4px 4px;
 	*/
-	border-bottom-left-radius: 4px 4px;
-	border-bottom-left-radius: 4px 4px;
-	border-bottom-right-radius: 4px 4px;
-	border-bottom-right-radius: 4px 4px;
-	border-top-left-radius: 4px 4px;
-	border-top-left-radius: 4px 4px;
-	border-top-right-radius: 4px 4px;
-	border-top-right-radius: 4px 4px;
+	border-radius: 4px 4px 4px 4px;
 	display: block;
 	font: normal normal normal 13px/normal 'Lucida Grande', Arial, sans-serif;
 	margin: 0px 0px 8px;
