--- a/src/webui/livemgr/templates/generic/actions.html
+++ b/src/webui/livemgr/templates/generic/actions.html
@@ -16,7 +16,7 @@ function change_per_page(caller) {
 	});
 }
 </script>
-<div class="actions">
+<div class="actions-box">
 	<div style="float: left;">
 		<input type="button" class="action disable" value="{% trans "disable" %}" disabled />
 		<input type="button" class="action enable" value="{% trans "enable" %}" disabled />
