--- a/src/webui/livemgr/templates/license/index.html
+++ b/src/webui/livemgr/templates/license/index.html
@@ -64,7 +64,7 @@ $(document).ready(function() {
 				</p>
 			</div>
 		</fieldset>
-		<div class="actions">
+		<div class="actions-box">
 			<input id="id_change" type="button" value="{% trans "Change" %}" class="default" />
 		</div>
 	</form>
