--- a/src/webui/livemgr/templates/profiles/update.html
+++ b/src/webui/livemgr/templates/profiles/update.html
@@ -133,7 +133,7 @@ $(document).ready(function() {
 				{% endfor %}
 			</div>
 		</fieldset>
-		<div class="actions">
+		<div class="actions-box">
 			<input type="submit" value="{% trans "Save" %}" class="default" />
 		</div>
 	</form>
