--- a/src/webui/livemgr/templates/settings/update.html
+++ b/src/webui/livemgr/templates/settings/update.html
@@ -73,7 +73,7 @@
 				{% endfor %}
 			</div>
 		</fieldset>
-		<div class="actions">
+		<div class="actions-box">
 			<input type="submit" value="{% trans "Save" %}" class="default" />
 		</div>
 	</form>
