--- a/src/webui/media/css/current/specific-webkit.css
+++ b/src/webui/media/css/current/specific-webkit.css
@@ -62,11 +62,11 @@ ul#navigator li:hover,
 ul#navigator li a:hover {
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
 }
-div.actions {
+.actions-box {
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#fff), to(#dadada));
 }
-div.actions [type='button'].default,
-div.actions [type='submit'].default {
+.actions-box [type='button'].default,
+.actions-box [type='submit'].default {
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
 }
 
