Replace all images by a PNG sprite.

--- a/src/webui/livemgr/templates/groups/form-fieldset-rules.html
+++ b/src/webui/livemgr/templates/groups/form-fieldset-rules.html
@@ -9,7 +9,7 @@
 			<span>{% trans "available" %}</span>
 		</div>
 		<p class="selector-filter">
-			<img src="{{MEDIA_URL}}img/django/icon_search.gif"> 
+			<img class="icon filter" src="{{MEDIA_URL}}img/trans1x1.gif">
 			<input type="text" id="rules_available_filter" />
 		</p>
 		<select id="rules_available" name="rules_available" multiple style="height: 200px; width:250px;">
