--- a/src/webui/livemgr/templates/generic/form-submit.html
+++ b/src/webui/livemgr/templates/generic/form-submit.html
@@ -4,6 +4,11 @@
 	<input type="submit" value="{% trans "Save and continue editing" %}" name="_save_edit" />
 	<input type="submit" value="{% trans "Save and add another" %}" name="_save_add" />
 	{% if delete %}
-	<p class="delete-box"><a href="#" class="delete">{% trans "Delete" %}</a></p>
+	<div class="delete-box">
+		<a href="#" class="delete">
+			<img class="icon delete" style="margin-top: -2px;" src="{{MEDIA_URL}}img/trans1x1.gif">
+			{% trans "Delete" %}
+		</a>
+	</div>
 	{% endif %}
 </div>
