--- a/src/webui/media/css/current/specific-msie.css
+++ b/src/webui/media/css/current/specific-msie.css
@@ -38,6 +38,13 @@ form.generic .titlebar.widget.right {
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3)";
 }
 
+/* list.css */
+table.list thead,
+table.list tfoot {
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff, endColorstr=#ffdadada);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff, endColorstr=#ffdadada)";
+}
+
 /* pagination.css */
 ul.pagination li a {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3);
