--- a/src/webui/livemgr/templates/generic/paginator.html
+++ b/src/webui/livemgr/templates/generic/paginator.html
@@ -26,6 +26,6 @@
 	{% endif %}
 </ul>
 {% endif %}
-<div style="padding-top: 4px; padding-bottom: 4px;">
+<div style="float: right; padding-top: 4px; padding-bottom: 4px;">
 	{{ page.start_index }} - {{ page.end_index }} {% trans "of" %} {{ page.paginator.count }}
 </div>
