--- a/src/webui/media/css/current/theme.css
+++ b/src/webui/media/css/current/theme.css
@@ -77,7 +77,7 @@ a:hover {
 }
 .spinner {
 	display: none;
-	position: relative;
+	position: absolute;
 }
 
 /* .flash ------------------------------------------------------------------- */
