--- a/src/webui/media/css/current/login.css
+++ b/src/webui/media/css/current/login.css
@@ -1,4 +1,4 @@
-body.login  {
+.login  {
 	margin: 0;
 	font-family: Verdana, sans-serif;
 	font-size: 12px;
@@ -13,11 +13,8 @@ body.login  {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin-left: -115px;
-	margin-top: -140px;
-}
-.login form {
-	margin: 0;
+	margin-left: -136px;
+	margin-top: -84px;
 }
 .login form fieldset {
 	width: 230px;
@@ -32,7 +29,6 @@ body.login  {
 	color: #666;
 }
 .login form input {
-	background: white;
 	border: 1px solid #DDD;
 	/* -specific-
 	-webkit-border-radius: 4px 4px 4px 4px;
@@ -41,57 +37,20 @@ body.login  {
 	border-radius: 4px 4px 4px 4px;
 	display: block;
 	font: normal normal normal 13px/normal 'Lucida Grande', Arial, sans-serif;
-	margin: 0px 0px 8px;
 	padding: 5px;
 	width: 218px;
-}
-.login form input[type='text'],
-.login form input[type='password'] {
 	outline: none;
 }
 .login form input[type='submit'] {
-	margin: 0;
-	padding: 0;
 	width: 70px;
-	overflow: visible;
 	/* -specific-
 	background: -webkit-gradient(linear, 0 40%, 0 70%, from(#F9F9F9), to(#E3E3E3));
 	background: -moz-linear-gradient(top, #F9F9F9, #E3E3E3);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3)";
 	*/
-	border: 1px solid #BBB;
-	height: 24px;
-	color: #888;
-	cursor: pointer;
 }
 .login form input[type='submit']:hover {
 	border-color: #999;
 	color: #888;
-}
-.login .flash {
-	padding: 5px 5px 5px 10px;
-	margin-bottom: 10px;
-	border-width: 2px;
-	border-style: solid;
-}
-.login .flash .icon {
-	float: left;
-}
-.login .flash.error {
-	border-color: #deb6b6;
-	background-color: #FFE3E3;
-	color: #666;
-}
-.login .icon {
-	width: 16px;
-	height: 16px;
-	background-image: url('/media/img/sprites.png');
-	background-repeat: no-repeat;
-} 
-.login .icon.error {
-	background-position: -112px 0px;
-}
-.login .icon.info {
-	background-position: -16px -16px;
 }
