Improved .actions-box CSS.

--- a/src/webui/livemgr/templates/settings/update.html
+++ b/src/webui/livemgr/templates/settings/update.html
@@ -74,7 +74,7 @@
 			</div>
 		</fieldset>
 		<div class="actions-box">
-			<input type="submit" value="{% trans "Save" %}" class="default" />
+			<input type="submit" class="action submit default" value="{% trans "Save" %}" />
 		</div>
 	</form>
 </div>
