--- a/src/webui/livemgr/templates/generic/form-submit.html
+++ b/src/webui/livemgr/templates/generic/form-submit.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 <div class="actions-box">
-	<input type="submit" value="{% trans "Save" %}" class="default" name="_save_list" />
-	<input type="submit" value="{% trans "Save and continue editing" %}" name="_save_edit" />
-	<input type="submit" value="{% trans "Save and add another" %}" name="_save_add" />
+	<input type="submit" class="action submit default" value="{% trans "Save" %}" name="_save_list" />
+	<input type="submit" class="action submit" value="{% trans "Save and continue editing" %}" name="_save_edit" />
+	<input type="submit" class="action submit" value="{% trans "Save and add another" %}" name="_save_add" />
 	{% if delete %}
 	<div class="delete-box">
 		<a href="#" class="delete">
