--- a/src/webui/media/css/current/theme.css
+++ b/src/webui/media/css/current/theme.css
@@ -85,7 +85,7 @@ a:hover {
 .flash {
 	font-size: 1.2em;
 	color: #000;
-	padding: 5px 5px 5px 10px;
+	padding: 5px;
 	margin: 10px 0px 10px 0px;
 	border-width: 2px;
 	border-style: solid;
@@ -195,9 +195,13 @@ a:hover {
 }
 .icon.arrow-up {
 	background-position: -48px -48px;
+	vertical-align: baseline;
+	height: 11px;
 }
 .icon.arrow-down {
 	background-position: -64px -48px;
+	vertical-align: baseline;
+	height: 11px;
 }
 
 /* Body blocks -------------------------------------------------------------- */
