Some CSS fixes for IE8.

--- a/src/webui/livemgr/templates/generic/search-advanced.html
+++ b/src/webui/livemgr/templates/generic/search-advanced.html
@@ -12,7 +12,7 @@
 		{% csrf_token %}
 		<fieldset>
 			{{ fields }}
-			<input type="submit" value="{% trans "Search" %}"
+			<input type="submit" class="button" value="{% trans "Search" %}"
 				alt="{% trans "Search" %}" alt="{% trans "Search" %}" />
 		</fieldset>
 	</form>
