--- a/src/webui/livemgr/templates/generic/search.html
+++ b/src/webui/livemgr/templates/generic/search.html
@@ -9,7 +9,7 @@
 			<label for="search_{{field_name}}" class="inline">{{ label }}</label>
 			{% endif %}
 			<input type="text" id="search_{{field_name}}" name="{{field_name}}" value="" size="30" class="field" />
-			<input type="image" src="/media/img/btn-search.gif" alt="{% trans "Search" %}" class="button" />
+			<input type="image" src="/media/img/btn-search.gif" alt="{% trans "Search" %}" class="magnifier-button" />
 		</fieldset>
 	</form>
     <div class="links">
