--- a/src/webui/livemgr/templates/groups/form-fieldset-rules.html
+++ b/src/webui/livemgr/templates/groups/form-fieldset-rules.html
@@ -3,7 +3,7 @@
 <div class="titlebar">
 	<span>{% trans "rules" %}</span>
 </div>
-<fieldset>
+<fieldset class="entitled">
 	<div class="field" style="float: left;">
 		<div class="titlebar widget left">
 			<span>{% trans "available" %}</span>
